--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"svelte-motion": "^0.12.2"
+		"svelte-motion": "^0.12.2",
+		"sweetalert2": "^11.15.10",
+		"xlsx": "^0.18.5"
 	}
 }
